--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -21,6 +21,7 @@
   --color-bg-secondary: #f5f5f5;
   --color-bg-tertiary: rgba(0, 0, 0, 0.08);
   --color-bg-hover: rgba(0, 0, 0, 0.12);
+  --color-input-bg: #fff;
 
   // Border colors
   --color-border: rgba(0, 0, 0, 0.15);
@@ -115,6 +116,7 @@ html.dark {
   --color-bg-secondary: #242424;
   --color-bg-tertiary: rgba(255, 255, 255, 0.08);
   --color-bg-hover: rgba(255, 255, 255, 0.12);
+  --color-input-bg: rgba(255, 255, 255, 0.1);
 
   --color-border: rgba(255, 255, 255, 0.15);
   --color-border-light: rgba(255, 255, 255, 0.1);
